--- a/vercel.json
+++ b/vercel.json
@@ -1,35 +1,14 @@
 {
-  "version": 2,
   "builds": [
     {
       "src": "main.py",
       "use": "@vercel/python"
-    },
-    {
-      "src": "index.html",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "style.css",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "script.js",
-      "use": "@vercel/static"
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/reward/(.*)",
-      "dest": "/main.py"
-    },
-    {
-      "src": "/",
-      "dest": "/index.html"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
+      "source": "/reward/:path*",
+      "destination": "/main.py"
     }
   ]
 }
